--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,3 +1,4 @@
 ﻿.red{color:red;}
-.abc{font-size:20px; font-style:italic;}
-        
+.abc{font-size:20px;}
+.b1{font-size:12px;}
+.cr{font-size:7px;padding:0px 0px;}
